--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="10"
-    tools:context="com.foodapp.appfood.Fragments.HomeFagment">
+    tools:context="com.foodapp.murti.Fragments.HomeFagment">
 
     <RelativeLayout
         android:layout_width="match_parent"
