--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.foodapp.appfood.Activity.Navigation">
+    tools:context="com.foodapp.murti.Activity.Navigation">
 
     <LinearLayout
         android:layout_width="match_parent"
