--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.foodapp.appfood.Activity.Navigation"
+    tools:context="com.foodapp.murti.Activity.Navigation"
     tools:showIn="@layout/app_bar_navigation">
 
 
