--- a/app/src/main/res/layout/fragment_catagory.xml
+++ b/app/src/main/res/layout/fragment_catagory.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.foodapp.appfood.Fragments.SubCatagoryFragment">
+    tools:context="com.foodapp.murti.Fragments.SubCatagoryFragment">
 
     <GridView
         android:id="@+id/gridview"
