--- a/app/src/main/res/layout/fragment_home_fagment.xml
+++ b/app/src/main/res/layout/fragment_home_fagment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.foodapp.appfood.Fragments.HomeFagment">
+    tools:context="com.foodapp.murti.Fragments.HomeFagment">
 
     <ListView
         android:id="@+id/gridview"
