--- a/app/src/main/res/layout/fragment_succesffully.xml
+++ b/app/src/main/res/layout/fragment_succesffully.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.foodapp.appfood.Fragments.Succesffully">
+    tools:context="com.foodapp.murti.Fragments.Succesffully">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
