--- a/app/src/main/res/layout/activity_signn_up.xml
+++ b/app/src/main/res/layout/activity_signn_up.xml
@@ -15,10 +15,8 @@
         android:layout_weight="7">
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
         android:layout_marginTop="10dp"/> </LinearLayout>
 
     <ScrollView
