--- a/app/src/main/res/layout/fragment_thankyou.xml
+++ b/app/src/main/res/layout/fragment_thankyou.xml
@@ -10,9 +10,9 @@
 
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@drawable/logo"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        android:background="@drawable/murti"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"/>
 
