--- a/app/src/main/res/layout/activity_thank.xml
+++ b/app/src/main/res/layout/activity_thank.xml
@@ -12,7 +12,7 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:background="@drawable/logo"
+        android:background="@drawable/murti"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"/>
 
