--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/splash_final"
     android:orientation="vertical"
     android:weightSum="10"
     tools:context="com.foodapp.murti.Activity.MainActivity">
@@ -78,6 +78,7 @@
         android:textColor="#fff"
         android:layout_gravity="right"
         android:textSize="18dp"
+        android:visibility="gone"
         android:gravity="right"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/city"
