--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,8 +10,8 @@
     tools:context="com.foodapp.murti.Activity.MainActivity">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="260dp"
+        android:layout_width="280dp"
+        android:layout_height="220dp"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
