--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/splash_final"
     android:orientation="vertical"
-    android:weightSum="10"
     tools:context="com.foodapp.murti.Activity.MainActivity">
 
     <LinearLayout
@@ -16,10 +15,10 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_width="280dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_centerHorizontal="true"
+
         android:layout_marginTop="10dp"
         android:background="@drawable/murti"/>
 
@@ -36,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+
         android:padding="12dp"
         android:textColorHint="@color/colorAccent"
         android:textColor="@color/colorAccent"
@@ -50,6 +50,7 @@
         android:layout_below="@+id/email"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+
         android:padding="10dp"
         android:textColorHint="@color/colorAccent"
         android:textColor="@color/colorAccent"
