--- a/app/src/main/res/layout/fragment_cat_view.xml
+++ b/app/src/main/res/layout/fragment_cat_view.xml
@@ -20,13 +20,15 @@
                 android:id="@+id/collapsingToolbarLayoutAndroidExample"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/white"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <com.android.volley.toolbox.NetworkImageView
                     android:id="@+id/parallax_header_imageview"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
+                    android:layout_gravity="center"
                     app:layout_collapseMode="parallax"
                     app:layout_collapseParallaxMultiplier="0.7" />
 
