--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,10 +11,12 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="260dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:background="@drawable/murti"/>
 
     <!--<Button-->
