--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,18 +9,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="4">
+        android:layout_height="124dp"
+        android:layout_weight="4"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="280dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-
-        android:layout_marginTop="10dp"
-        android:background="@drawable/murti"/>
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/murti" />
 
     </LinearLayout>
 
