--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,15 +27,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="3">
+        android:orientation="vertical">
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-
         android:padding="12dp"
         android:textColorHint="@color/colorAccent"
         android:textColor="@color/colorAccent"
@@ -50,7 +48,6 @@
         android:layout_below="@+id/email"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
-
         android:padding="10dp"
         android:textColorHint="@color/colorAccent"
         android:textColor="@color/colorAccent"
@@ -59,35 +56,23 @@
         android:inputType="textPassword"
         android:hint="Password"/>
 
-    <!--<Spinner-->
-        <!--android:id="@+id/city"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text=""-->
-        <!--android:layout_below="@+id/password"-->
-        <!--android:inputType="textPersonName"-->
-        <!--android:padding="10dp"-->
-        <!--android:layout_marginTop="20dp"-->
-        <!--android:layout_marginLeft="20dp"-->
-        <!--android:layout_marginRight="20dp"-->
-        <!--android:textColor="@color/colorAccent"-->
-        <!--android:background="@drawable/strock_edtttext"/>-->
+
+
+
+
+        </RelativeLayout>
+
+
     <TextView
         android:id="@+id/forgotssword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#fff"
+        android:text="Forgot Password ?"
         android:layout_gravity="right"
-        android:textSize="18dp"
-        android:visibility="gone"
-        android:gravity="right"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/city"
-        android:textStyle="bold"
-        android:layout_marginRight="10dp"
-        android:text="Forgot Password"/>
-        </RelativeLayout>
-
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/amazon"
+        android:textSize="16dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
