--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -15,6 +15,10 @@
             android:id="@+id/history"
             android:icon="@drawable/history"
             android:title="Order History" />
+        <item
+            android:id="@+id/referal"
+            android:icon="@drawable/history"
+            android:title="Refer a Friend" />
         <!--<item-->
             <!--android:id="@+id/breakfirst"-->
             <!--android:icon="@drawable/ic_menu_slideshow"-->
