--- a/app/src/main/res/layout/customdatalist.xml
+++ b/app/src/main/res/layout/customdatalist.xml
@@ -8,7 +8,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/img1"/>
+        android:background="@drawable/murti"/>
 
 
 </LinearLayout>
