--- a/app/src/main/res/layout/custon_subcatagory_view.xml
+++ b/app/src/main/res/layout/custon_subcatagory_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <android.support.v7.widget.CardView
@@ -33,7 +33,8 @@
                     android:layout_height="130dp"
                     android:scaleType="fitXY"
                     android:padding="5dp"
-                    />
+                    android:src="@drawable/murti"/>
+
                 <TextView
                     android:id="@id/name"
                     android:layout_width="wrap_content"
