--- a/app/src/main/res/layout/list_tranding.xml
+++ b/app/src/main/res/layout/list_tranding.xml
@@ -19,6 +19,7 @@
             android:id="@+id/imageNetworking"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:scaleType="fitXY"
             android:adjustViewBounds="true" />
 
         <TextView
