--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -61,6 +61,7 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/amazon"
                 android:goIcon="@color/red"
+                android:theme="@style/SearchViewTheme"
                 android:queryHint="Search here"/>
         </LinearLayout>
 
