--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:textColor="@color/colorAccent"
         android:background="@drawable/strock_edtttext"
         android:inputType="phone"
-        android:hint="Email"/>
+        android:hint="Mobile No"/>
 
     <EditText
         android:id="@+id/password"
