--- a/app/src/main/res/layout/fragment_update_profile2.xml
+++ b/app/src/main/res/layout/fragment_update_profile2.xml
@@ -105,6 +105,7 @@
                 android:text="Complex:"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
+                android:visibility="gone"
                 android:textColor="@color/colorAccent"/>
             <EditText
                 android:id="@+id/complex"
