--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,6 +74,19 @@
         android:textColor="@color/amazon"
         android:textSize="16dp"/>
 
+
+    <TextView
+        android:id="@+id/skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SKIP >"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:textColor="@color/amazon"
+        android:textSize="20dp"/>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -81,6 +94,8 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_weight="3">
+
+
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
