--- a/app/src/main/res/layout/list_tranding.xml
+++ b/app/src/main/res/layout/list_tranding.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:id="@+id/l_men_salon"
         android:layout_width="60dp"
-        android:layout_height="90dp"
+        android:layout_height="100dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
@@ -27,9 +27,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="2dp"
             android:gravity="center_horizontal"
             android:text="Salon"
+            android:layout_marginBottom="-10dp"
             android:textColor="@color/black"
             android:textSize="12sp" />
     </LinearLayout>
