--- a/app/src/main/res/layout/custonlistview_history.xml
+++ b/app/src/main/res/layout/custonlistview_history.xml
@@ -216,6 +216,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:visibility="gone"
             android:orientation="horizontal"
             android:weightSum="2">
 
