--- a/app/src/main/res/layout/activity_signn_up.xml
+++ b/app/src/main/res/layout/activity_signn_up.xml
@@ -11,113 +11,127 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="7">
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:layout_marginTop="10dp"/> </LinearLayout>
+        android:layout_weight="7"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
+            android:layout_marginTop="10dp" />
+    </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="3">
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
-        android:padding="12dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textColorHint="@color/colorAccent"
-        android:textColor="@color/colorAccent"
-        android:background="@drawable/strock_edtttext"
-        android:inputType="textPersonName"
-        android:hint="Name"/>
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
-        android:padding="12dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:inputType="textEmailAddress"
-        android:textColorHint="@color/colorAccent"
-        android:textColor="@color/colorAccent"
-        android:background="@drawable/strock_edtttext"
-        android:hint="Email"/>
-
-    <EditText
-        android:id="@+id/mobile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/email"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:padding="12dp"
-        android:inputType="phone"
-        android:enabled="false"
-        android:textColorHint="@color/colorAccent"
-        android:textColor="@color/colorAccent"
-        android:background="@drawable/strock_edtttext"
-        android:hint="Mobile No"/>
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/mobile"
-        android:layout_marginLeft="20dp"
-        android:padding="12dp"
-        android:layout_marginTop="10dp"
-        android:textColorHint="@color/colorAccent"
-        android:textColor="@color/colorAccent"
-        android:background="@drawable/strock_edtttext"
-        android:layout_marginRight="20dp"
-        android:inputType="textPassword"
-        android:hint="Password"/>
-
-        <EditText
-            android:id="@+id/re_password"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/mobile"
-            android:layout_marginLeft="20dp"
-            android:padding="12dp"
-            android:layout_marginTop="10dp"
-            android:textColorHint="@color/colorAccent"
-            android:textColor="@color/colorAccent"
-            android:background="@drawable/strock_edtttext"
-            android:layout_marginRight="20dp"
-            android:inputType="textPassword"
-            android:hint="Re Enter Password"/>
+            android:layout_weight="3"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/strock4"
-        android:textSize="22dp"
-        android:textColor="#fff"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:gravity="center"
-        android:layout_gravity="bottom"/>
-</LinearLayout>
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/logo"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/strock_edtttext"
+                android:hint="Name"
+                android:inputType="textPersonName"
+                android:padding="12dp"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorAccent" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/name"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/strock_edtttext"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:padding="12dp"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorAccent" />
+
+            <EditText
+                android:id="@+id/mobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/email"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/strock_edtttext"
+                android:enabled="false"
+                android:hint="Mobile No"
+                android:inputType="phone"
+                android:padding="12dp"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorAccent" />
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/mobile"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/strock_edtttext"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="12dp"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorAccent" />
+
+            <EditText
+                android:id="@+id/re_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/mobile"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/strock_edtttext"
+                android:hint="Re Enter Password"
+                android:inputType="textPassword"
+                android:padding="12dp"
+                android:textColor="@color/colorAccent"
+                android:textColorHint="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/txtTerms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:text="@string/tnc"
+                android:textColor="@color/colorAccent" />
+
+            <Button
+                android:id="@+id/signup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/strock4"
+                android:gravity="center"
+                android:text="Sign Up"
+                android:textColor="#fff"
+                android:textSize="22dp" />
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
