--- a/app/src/main/res/layout/activity_thank.xml
+++ b/app/src/main/res/layout/activity_thank.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
-        android:text="Thank you for Placing Order  at Murti"
+        android:text="Thank you for Placing Order at Murti Foods"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="#228B22"/>
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="Team Murti"
+        android:visibility="gone"
         android:layout_gravity="center"
         android:gravity="center"
         android:textColor="@color/colorAccent"/>
@@ -67,6 +68,7 @@
         android:text="Email :info@hoomiehome.com"
         android:layout_gravity="center"
         android:gravity="center"
+        android:visibility="gone"
         android:textColor="@color/colorAccent"/>
     <TextView
         android:id="@+id/phone"
