--- a/app/src/main/res/layout/fragment_cat_view.xml
+++ b/app/src/main/res/layout/fragment_cat_view.xml
@@ -5,45 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.foodapp.murti.Fragments.CartFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/coordinatorRootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!--<android.support.design.widget.AppBarLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:id="@+id/android_appbar_layout"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-            <!--<android.support.design.widget.CollapsingToolbarLayout-->
-                <!--android:id="@+id/collapsingToolbarLayoutAndroidExample"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:background="@color/white"-->
-                <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
-
-                <!--<com.android.volley.toolbox.NetworkImageView-->
-                    <!--android:id="@+id/parallax_header_imageview"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:scaleType="fitXY"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--app:layout_collapseMode="parallax"-->
-                    <!--app:layout_collapseParallaxMultiplier="0.7" />-->
-
-                <!--<android.support.v7.widget.Toolbar-->
-                    <!--android:id="@+id/toolbar_android"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="?attr/actionBarSize"-->
-                    <!--app:layout_collapseMode="pin"-->
-                    <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
-                    <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />-->
-
-            <!--</android.support.design.widget.CollapsingToolbarLayout>-->
-
-        <!--</android.support.design.widget.AppBarLayout>-->
 
 
         <com.android.volley.toolbox.NetworkImageView
@@ -75,13 +46,13 @@
                     android:textStyle="bold"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Loading..."/>
+                    android:text=""/>
                 <TextView
                     android:id="@+id/mrp"
                     android:layout_below="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Loading..."/>
+                    android:text=""/>
 
                 <TextView
                     android:id="@+id/disount"
@@ -92,7 +63,7 @@
                     android:paddingRight="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Loading..."/>
+                    android:text=""/>
 
                 <LinearLayout
                     android:id="@+id/selling1"
@@ -113,7 +84,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorAccent"
                     android:textStyle="bold"
-                    android:text="Loading..."/>
+                    android:text=""/>
                 </LinearLayout>
                 <TextView
                     android:id="@+id/size"
@@ -128,7 +99,7 @@
                     android:layout_below="@+id/size"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Loading..."/>
+                    android:text=""/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -196,6 +167,6 @@
 
 
     </LinearLayout>
-
+    </ScrollView>
 
 </LinearLayout>
